--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Proyecto web de ciclistas de alto rendimiento",
   "main": "test.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack -d",
+    "start": "webpack-dev-server",
+    "build": "webpack -p --config prod.config.js"
   },
   "author": "Andrea Gonzalez",
   "license": "ISC",
@@ -13,10 +16,25 @@
     "@babel/core": "^7.11.1",
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
+    "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
+    "bootstrap": "^4.5.2",
+    "css-loader": "^4.2.1",
     "html-webpack-plugin": "^4.3.0",
-    "webpack": "^4.44.1",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
+    "postcss-cli": "^7.1.1",
+    "style-loader": "^1.2.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {
+    "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.3",
+    "webpack": "^4.44.1"
   }
 }
