--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ciclista-wb",
-  "version": "0.1.0",
+  "name": "ciclictas",
+  "version": "0.8.0",
   "description": "Proyecto web de ciclistas de alto rendimiento",
   "main": "test.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "start": "webpack-dev-server",
     "build": "webpack -p --config prod.config.js"
   },
-  "author": "Andrea Gonzalez",
+  "author": "Oscar",
   "license": "ISC",
   "dependencies": {
     "@babel/cli": "^7.10.5",
@@ -24,15 +24,16 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "postcss-cli": "^7.1.1",
+    "precss": "^4.0.0",
     "style-loader": "^1.2.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "postcss-loader": "^3.0.0",
-    "precss": "^4.0.0",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "webpack": "^4.44.1"
